--- a/c6bank.html
+++ b/c6bank.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <header>
+    <header class="top-site">
         <div>
             <svg class="jss6 jss12" viewBox="0 0 120 24" xmlns="http://www.w3.org/2000/svg">
                 <path clip-rule="evenodd" shape-rendering="geometricPrecision"
@@ -27,17 +27,58 @@
                 <li><a href="#">Tire suas dúvidas</a></li>
             </ul>
         </nav>
-        <button>Abra sua conta</button>
+        <button class="top-button">Abra sua conta</button>
     </header>
     <section class="full-banner">
         <div class="destak">
             <h3><span>C6 GLOBAL INVEST</span> Bolsa Americana e fundos globais direto no app</h3>
+
+            <h1>O banco da vida de 20 milhões de pessoas</h1>
+            <h2>Conta digital, cartão de crédito, investimento e mais: tudo em um só app.</h2>
+            <button>nossos produtos</button>
         </div>
-        <h1>O banco da vida de 20 milhões de pessoas</h1>
-        <h2>Conta digital, cartão de crédito, investimento e mais: tudo em um só app.</h2>
-        <button>nossos produtos</button>
     </section>
     <footer></footer>
+
+    <script>
+        const header = document.querySelector('.top-site');
+        const button = document.querySelector('.top-button');
+        const body = document.querySelector('body');
+
+        header.style.background = 'none';
+        button.style.width = '150px';
+        button.classList.add('disabled');
+
+        // janela  e site - window e site
+        //javascript é dirigida a eventos
+        window.addEventListener('scroll', (e) => {
+            console.log(body.clientHeight);
+
+            if (window.scrollY < 100) {
+                header.style.background = 'none';
+                button.classList.add('disabled');
+            }
+            else {
+                // const aArray = header.querySelectorAll("a");
+                const logo = header.querySelector(".jss12");
+
+                if (window.scrollY >= (body.clientHeight - 1000)) {
+                    header.style.background = '#000';
+                    logo.style.fill = '#fff';
+                    header.classList.add("footer-link-a");
+                    // aArray.forEach(item => item.style.color = "#fff");
+                } else {
+                    header.style.background = '#fff';
+                    button.classList.remove('disabled');
+                    logo.style.fill = '#000';
+                    header.classList.remove("footer-link-a");
+                    // aArray.forEach(item => item.style.color = "#222");
+
+                }
+            }
+        });
+
+    </script>
 </body>
 
 </html>
